--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: ^2.0.0
   carousel_slider: ^1.4.1
   cupertino_icons: ^0.1.2
   flutter_platform_widgets: ^0.32.4
