--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   carousel_slider: ^1.4.1
   cupertino_icons: ^0.1.2
   flutter_platform_widgets: ^0.32.4
+  flutter_vector_icons: ^0.2.1
   font_awesome_flutter: ^8.5.0
+  shake: ^0.1.0
+  url_launcher: ^5.4.1
   webview_flutter: ^0.3.19+5
 
 dev_dependencies:
